tests/miniJava/neg/001505_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new length int [ 0 ] ; } }
